# autocad-tool

./: .gitignore  .replit  .replit-new  AI_analyzed_drawing.dxf  app.py  demo.py  pyproject.toml  replit.md  test_enhancement.py  test_hybrid_approach.py
.local/state/replit/agent/: .latest.json  progress_tracker.md
.local/state/replit/agent/filesystem/: filesystem_state.json
outputs/: measurements.csv  measurements.json  processed_2024_10_10 - 162 Ironwood Trail - The Linden - RH - Architectural - Copy_1759907217174.dxf  processed_2024_10_10_-_162_Ironwood_Trail_-_The_Linden_-_RH_-_Architectural_-_Copy.dxf  processed_ACAD-AJEC_-_Takeoff_Template_Imperial_in_-_Jack_Test_1.dxf  processed_ACAD-Drawing1.dxf  processed_AJEC_-_Takeoff_Template_Imperial_in_-_Jack_Test_1.dxf  processed_F2186890.dxf  processed_autocad.dxf  processed_test_drawing.dxf  test_boundary_output.dxf  test_improved_system.dxf  test_wall_boundaries.dxf  wall_boundaries_only.dxf
src/: __init__.py  advanced_wall_detector.py  architectural_analyzer.py  autocad_integration.py  boundary_matcher.py  dxf_builder.py  enhanced_geometry_processor.py  floor_plan_analyzer.py  improved_wall_detector.py  parallel_wall_detector.py  pdf_converter.py  pdf_processor.py  pdf_vector_extractor.py  vector_wall_detector.py  wall_geometry_detector.py
templates/: index.html
uploads/: ACAD-AJEC_-_Takeoff_Template_Imperial_in_-_Jack_Test_1.dxf  ACAD-Drawing1.dxf  AJEC_-_Takeoff_Template_Imperial_in_-_Jack_Test_1.dxf
